--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-torch
-huggingface-hub
-pynvml
-numpy
-vllm
-aiohttp
+torch==2.0.1
+huggingface-hub==0.16.4
+pynvml==11.5.0
+numpy==1.25.2
+vllm==0.1.4
+aiohttp==3.8.5
+uvicorn==0.23.2
